# liketext

./: Makefile  README.md  pyproject.toml
src/liketext/: __init__.py  re.py  text.py  text_decorations.py
tests/: test_html.py  test_md.py  test_text.py  test_text_decorations.py
