[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liketext"
version = "1.1"
authors = [
    { name = "liketapi", email = "seryumed@gmail.com" }
]
keywords = [
    "text",
    "html",
    "md",
    "telegram",
]
description = "The library for management telegram text"
readme = "README.md"
requires-python = ">=3.7"

[project.optional-dependencies]
test = [
    "pytest~=7.2.1",
    "pytest-cov~=4.0.0",
]
dev = [
    "black~=23.1",
    "isort~=5.11",
    "ruff~=0.0.246"
]

[project.urls]
"Homepage" = "https://github.com/liketapi/liketext"
"Bug Tracker" = "https://github.com/liketapi/liketext/issues"

[tool.ruff]
line-length = 99
select = [
    "C4",
    "E",
    "F",
    "T10",
    "T20",
    "Q",
    "RET",
]
src = ["src/liketext"]
ignore = [
    "F401"
]
exclude = [
    ".git",
    "dist",
    ".venv",
    "tests",
]
target-version = "py37"

[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
exclude = '''
(
    \.git
  | dist
  | .venv
)
'''

[tool.isort]
profile = "black"
